--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,35 +13,35 @@
         android:theme="@style/Theme.UberApp_Tim21"
         tools:targetApi="31">
         <activity
-            android:name=".PassengerInbox"
+            android:name="activity.model.PassengerInbox"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".PassengerRideHistoryActivity"
+            android:name=".activity.passenger.PassengerRideHistoryActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".DriverInboxActivity"
+            android:name=".activity.driver.DriverInboxActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".DriverAccountActivity"
+            android:name=".activity.driver.DriverAccountActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".DriverRideHistoryActivity"
+            android:name=".activity.driver.DriverRideHistoryActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
@@ -80,7 +80,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".activity.PassengerRegisterActivity"
+            android:name=".activity.passenger.PassengerRegisterActivity"
             android:exported="false"
             android:theme="@style/Theme.MyDialog">
             <meta-data
