--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
     <application
         android:allowBackup="true"
+        android:usesCleartextTraffic="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher_mango"
@@ -12,6 +16,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.UberApp_Tim21"
         tools:targetApi="31">
+
 
         <activity
             android:name=".activity.driver.DriverMainActivity"
@@ -103,6 +108,10 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+
+
     </application>
+
+
 
 </manifest>
